<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="finishClicked"
        android:text="@string/mail_back"
        android:textColor="?attr/colorPrimary" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_title"
        android:textColor="@color/atley_foreground"
        android:textSize="28sp" />

    <EditText
        android:id="@+id/logCall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/log_call"
        android:textColor="@color/atley_foreground" />

    <EditText
        android:id="@+id/logFrequency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/log_frequency"
        android:textColor="@color/atley_foreground" />

    <EditText
        android:id="@+id/logMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/log_mode"
        android:textColor="@color/atley_foreground" />

    <EditText
        android:id="@+id/logNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/log_notes"
        android:textColor="@color/atley_foreground" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:backgroundTint="?attr/colorPrimary"
        android:onClick="saveQsoClicked"
        android:text="@string/log_save"
        android:textAllCaps="false"
        android:textColor="@color/on_accent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/logList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
</LinearLayout>
